# hybrid-GGPO

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  hybrid_ggpo.cpp  hybrid_ggpo.h  hybridggpo.h
headers/: hybrid_ggpo.h  test.h
headers/Samples/: DSSample.h  FSSample.h
headers/strategy/: AHybridInputPredictionStrategy.h  ARandomInputPredictionStrategy .h  IInputPredictionStrategy.h
src/: CMakeLists.txt  CMakeSources.cmake  GameStateService.cpp  HybridGGPOServiceProvider.cpp  IGameStateService.cpp  aClass.cpp  hybrid_ggpo.cpp  main.cpp
src/Samples/: DSSample.cpp  FSSample.cpp
src/headers/: GameStateService.h  HybridGGPOServiceProvider.h  IGameStateService.h  aclass.h
src/headers/ml/: MLPModelWrapper.h
src/headers/mlp/: MlpWrapper.h
src/headers/samples/: DSSample.h  DatasetDSSampleMapper.h  DatasetFSSampleMapper.h  DatasetSampleMapper.h
src/headers/service/: HybridGGPOServiceProvider.h  IGameStateService.h  IHybridGGPOService.h  IInputPredictionStrategyService.h
src/headers/service/gameState/: AGameStateDSSService.h  AGameStateFSSService.h  IGameStateService.h
src/headers/service/strategy/: ARandomInputPredictionStrategyService.h  IInputPredictionStrategyService.h
src/headers/session/: HybridP2PSession.h
src/headers/strategy/: AHybridInputPredictionStrategyService.h  ARandomInputPredictionStrategy .h  ARandomInputPredictionStrategyService.h  IInputPredictionStrategy.h  IInputPredictionStrategyService.h  RandomInputPredictionStrategy.h
src/headers/synchronisation/: HybridInputQueue.h  HybridSync.h  SyncWithPredictionStrategy.h
src/include/: hybrid_ggpo.h  hybridggpo.h
src/ml/: MLPModelWrapper.cpp
src/mlp/: MlpWrapper.cpp
src/samples/: DatasetDSSampleMapper.cpp  DatasetFSSampleMapper.cpp
src/service/: HybridGGPOServiceProvider.cpp
src/service/gameState/: AGameStateDSSService.cpp  AGameStateFSSService.cpp  IGameStateService.cpp
src/service/strategy/: IInputPredictionStrategyService.cpp
src/session/: HybridP2PSession.cpp
src/synchronisation/: HybridInputQueue.cpp  HybridSync.cpp  SyncWithPredictionStrategy.cpp
